--- a/style.css
+++ b/style.css
@@ -582,6 +582,113 @@ body .form__callback ::-moz-placeholder {
 body .form__callback ::placeholder {
   color: #FFFFFF;
 }
+body .footer {
+  margin: 80px 0;
+}
+body .footer__logo {
+  margin-bottom: 40px;
+}
+body .footer__contact {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+body .footer__contact_title {
+  margin-top: 10px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 21px;
+  color: #FFFFFF;
+}
+body .footer__contact p {
+  font-family: "Roboto Flex";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 21px;
+  color: #FFFFFF;
+}
+body .footer__menu_nav {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  padding-left: 0px;
+}
+body .footer__menu_nav li {
+  list-style-type: none;
+}
+body .footer__menu_nav li a {
+  font-family: "Roboto Flex";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23px;
+  color: #FFFFFF;
+  text-decoration: none;
+}
+body .footer__form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+}
+body .footer__form_title {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 21px;
+  color: #FFFFFF;
+}
+body .footer__form input {
+  height: 40px;
+  width: 350.05px;
+  background-color: rgba(0, 0, 0, 0);
+  border: none;
+  border-bottom: 1px solid #FFFFFF;
+  font-family: "Roboto Flex";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 21px;
+  color: #FFFFFF;
+}
+body .footer__form ::-moz-placeholder {
+  font-family: "Roboto Flex";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 21px;
+  color: #FFFFFF;
+}
+body .footer__form ::placeholder {
+  font-family: "Roboto Flex";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 21px;
+  color: #FFFFFF;
+}
+body .footer__form button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-top: 20px;
+  font-family: "Roboto Flex";
+  font-style: normal;
+  font-weight: 457;
+  font-size: 24px;
+  line-height: 28px;
+  color: #FFFFFF;
+  width: 350px;
+  height: 53px;
+  border: 1px solid #FFFFFF;
+  background-color: rgba(0, 0, 0, 0);
+}
 body .title-section {
   font-family: "Nasalization";
   font-style: normal;
@@ -629,6 +736,10 @@ body .btn {
   }
 }
 @media only screen and (max-width: 992px) {
+  .footer__menu {
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
   .form__callback input {
     width: 350px;
   }
@@ -671,6 +782,9 @@ body .btn {
   }
 }
 @media only screen and (min-width: 993px) {
+  .footer__menu {
+    margin-bottom: 75px;
+  }
   .form__callback input {
     width: 450px;
   }
