--- a/style.scss
+++ b/style.scss
@@ -104,7 +104,7 @@ body {
 
             .nav-links {
                 position: fixed;
-                top: 5vh;
+                top: 7vh;
                 right: 0;
                 height: 40vh;
                 width: 100%;
@@ -779,7 +779,7 @@ body {
             button {
                 display: flex;
                 justify-content: center;
-                align-items: center;
+                align-items: centerg;
                 gap: 20px;
                 margin-top: 20px;
                 font-family: 'Roboto Flex';
